<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spectr">
    <TextView
        android:id="@+id/imageApp_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/head2_title"
        android:layout_marginTop="240dp"
        android:textSize="26sp"
        android:padding="2sp"
        android:gravity="center"
        android:text="@string/head_title"
        android:textColor="#F1D6C5"
        app:layout_constraintDimensionRatio="h,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    android:textColor="#97DF70"-->
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="26sp"
        android:background="@drawable/mybutton"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageApp_17" >

    </EditText>
    <!--    <requestFocus/>-->


    <Button
        android:id="@+id/button_enter"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="#00100F0F"
        android:enabled="true"
        android:text="@string/enter"
        android:textColor="#DD2C00"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="160dp"
        android:layout_height="68dp"
        android:layout_marginTop="200dp"
        android:background="#00100F0F"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="#BA8DD1"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/button_arhive"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/button_enter" />

    <Button
        android:id="@+id/button_arhive"
        android:layout_width="160dp"
        android:layout_height="68dp"
        android:background="#00100F0F"
        android:enabled="false"
        android:text="@string/arhive"
        android:textColor="#BA8DD1"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_next"
        app:layout_constraintTop_toTopOf="@+id/button_next" />

    <TextView
        android:id="@+id/notify_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text=""
        android:fontFamily="@font/sofiasanscondensed_lightitalic"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

