<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cabinet_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="#EFAC7A"
    android:orientation="vertical">
    <!--    android:background="#9A7FFD"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardCornerRadius="12dp"
                app:strokeColor="#770C30"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/cabinet_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="#FF9800"
                    android:cropToPadding="true"
                    android:padding="4dp"
                    />
            </com.google.android.material.card.MaterialCardView>

            <ImageButton
                android:id="@+id/cabinet_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_rounded"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            <TextView-->
            <!--                android:id="@+id/save_image"-->
            <!--                style="?android:listSeparatorTextViewStyle"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/cabinet_title_label"/>-->


            <TextView
                android:id="@+id/cabinet_title2"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:padding="6dp"
                android:text="Кабинет №1"
                android:textColor="#180737"
                android:textSize="16sp">

            </TextView>
            <!--                android:hint="@string/cabinet_title_hint"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="12dp"
                    app:strokeColor="#770C30"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/cabinet_photo2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="1dp"
                        android:background="@color/teal_700"
                        android:cropToPadding="true"
                        android:padding="4dp"
                    />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="12dp"
                    app:strokeColor="#770C30"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/cabinet_photo3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="1dp"
                        android:background="#700724"
                        android:cropToPadding="true"
                        android:padding="4dp"
                        android:scaleType="centerInside"
                      />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="12dp"
                    app:strokeColor="#770C30"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/cabinet_photo4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="1dp"
                        android:background="#3F51B5"
                        android:cropToPadding="true"
                        android:padding="4dp"
                        android:scaleType="centerInside"
                       />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cabinet_details_label"
        android:textColor="#09F1F1"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cabinet_date"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/red_rounded"
        android:textColor="#fff"
        tools:text="23 05 2024 14 11:56 " />

    <!--    <CheckBox-->
    <!--        android:id="@+id/cabinet_solved"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/cabinet_solved_label"/>-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cabinet_suspect"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/grey_rounded"
        android:text="@string/cabinet_suspect_text"
        android:textColor="#fff" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cabinet_close"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/grey_all"
        android:enabled="false"
        android:text="Закрыть кабинет>"
        android:textColor="#fff" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cabinet_report"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/brown"
        android:text="@string/cabinet_report_text"
        android:textColor="#fff" />
    <!--    <RadioGroup-->
    <!--        android:id="@+id/report_radio_group"-->
    <!--        android:layout_width="370dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:padding="30dp"-->
    <!--        android:layout_marginRight="50dp"-->
    <!--        android:layout_marginTop="15dp">-->
    <!--        <RadioButton-->
    <!--            android:id="@+id/just_foto_send"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:textSize="16sp"-->
    <!--            android:textColor="#5D3671"-->
    <!--            android:text="Отправить фото"/>-->
    <!--        <RadioButton-->
    <!--            android:id="@+id/just_text_report_send"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:textSize="16sp"-->
    <!--            android:textColor="#065147"-->
    <!--            android:text="Отправить текст"/>-->
    <!--        <RadioButton-->
    <!--            android:id="@+id/send_all_content_report"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:textSize="16sp"-->
    <!--            android:textColor="#6200EA"-->
    <!--            android:text="Отправить всё"/>-->
    <!--    </RadioGroup>-->


</LinearLayout>